--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
       font-src 'self' https://fonts.gstatic.com;
       img-src 'self' data: https: blob:;
-      connect-src 'self' https://images.igdb.com;
+      connect-src 'self' https://images.igdb.com https://qiadj0ly1g.execute-api.us-east-1.amazonaws.com;
       base-uri 'self';
       form-action 'self';
       frame-ancestors 'none';
