--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
       http-equiv="Content-Security-Policy"
       content="
       default-src 'self';
-      script-src 'self' 'unsafe-inline';
+      script-src 'self' 'unsafe-inline' 'unsafe-eval';
       style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
       font-src 'self' https://fonts.gstatic.com;
       img-src 'self' data: https: blob:;
-      connect-src 'self' https://images.igdb.com https://qiadj0ly1g.execute-api.us-east-1.amazonaws.com;
+      connect-src 'self' https://images.igdb.com https://qiadj0ly1g.execute-api.us-east-1.amazonaws.com http://localhost:3000;
+      worker-src 'self' blob:;
+      child-src 'self' blob:;
       base-uri 'self';
       form-action 'self';
       frame-ancestors 'none';
@@ -28,7 +30,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=block"
       rel="stylesheet"
     />
 
@@ -42,8 +44,21 @@
     <title>GameVault - Game Collection</title>
   </head>
 
-  <body>
+  <body class="fonts-loading">
     <div id="root"></div>
+    <script>
+      // Gerenciar carregamento de fontes
+      if ('fonts' in document) {
+        document.fonts.ready.then(() => {
+          document.body.classList.remove('fonts-loading');
+          document.body.classList.add('fonts-loaded');
+        });
+      } else {
+        // Fallback para navegadores sem suporte
+        document.body.classList.remove('fonts-loading');
+        document.body.classList.add('fonts-loaded');
+      }
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
